--- a/src/client/app/components/project-question-form/project-question-form.html
+++ b/src/client/app/components/project-question-form/project-question-form.html
@@ -75,6 +75,8 @@
                               options-type="vm.projectQuestion.type"></project-question-options>
 
   </div>
+
+  <pre>{{vm.projectQuestion |json}}</pre>
   <div class="row project-question-form__buttons">
     <div class="col-sm-7">
       <div class="col-sm-offset-3 col-sm-9">
